Added Controller FrontSide

--- a/hackathonProject.client/index.html
+++ b/hackathonProject.client/index.html
@@ -67,7 +67,7 @@
     <section id="router-view">
       <!-- primary viewport -->
     </section>
-
+    <div class="container-fluid"></div>
 
   </main>
 
