--- a/hackathonProject.client/index.html
+++ b/hackathonProject.client/index.html
@@ -10,9 +10,12 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.0.96/css/materialdesignicons.min.css"
     integrity="sha512-fXnjLwoVZ01NUqS/7G5kAnhXNXat6v7e3M9PhoMHOTARUMCaf5qNO84r5x9AFf5HDzm3rEZD8sb/n6dZ19SzFA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Marvel&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/style/main.css">
   <link rel="stylesheet" href="assets/style/style.css">
-  <title>hackathonProject.client</title>
+  <title>Super Dogs</title>
 </head>
 
 <body>
@@ -20,7 +23,7 @@
   <header>
     <nav class="navbar navbar-dark navbar-expand bg-dark text-light px-2">
       <a class="navbar-brand" href="#">
-        <span class="ml-2">SupaDogs</span>
+        <span class="ml-2 fs-1" id="nav-title">Super Dogs</span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,12 +51,7 @@
 
       </section>
     </div>
-    <form onsubmit="app.DogsController.createDog()">
-      <input name="name" type="text" placeholder="name">
-      <input type="type" type="boolean" placeholder="type">
-    </form>
-    <button class="create-button btn btn-success rounded-circle elevation-2 w-5 h-5"><i
-        class="mdi mdi-dog"></i></button>
+
   </main>
 
 
@@ -61,6 +59,40 @@
   <footer>
 
   </footer>
+
+  <button type="button" class="btn btn-primary create-button elevation-2" data-bs-toggle="modal"
+    data-bs-target="#staticBackdrop1">
+    Create Super Dog <i class="mdi mdi-dog"></i>
+  </button>
+
+  <!-- Modal -->
+  <div class="modal fade" id="staticBackdrop1" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body row">
+          <form onsubmit="app.DogsController.createDog()">
+            <input class="col-12 mb-3" required="true" minlength="2" maxlength="30" name="name" type="text"
+              placeholder="Name">
+            <input class="col-1 mb-3" required="true" name="type" type="checkbox" placeholder="type">Hero?
+            <input class="col-12 mb-3" required="true" name="description" type="textarea" maxlength="300"
+              placeholder="Dog Description">
+            <input class="col-12 mb-3" required="true" name="imgUrl" type="text" placeholder="Image Link">
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 
 
 
