--- a/hackathonProject.client/index.html
+++ b/hackathonProject.client/index.html
@@ -49,6 +49,30 @@
       <section class="row">
 
 
+        <!-- Modal -->
+        <div class="modal fade" id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+          aria-labelledby="staticBackdropLabel" aria-hidden="true">
+          <div class="modal-dialog modal-xl">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body row" id="active-Dog">
+                <!-- <div class="col-6">
+                  <img src="" alt="">
+                </div class="6">
+                <p>NAME</p>
+                <p>TYPE</p>
+                <p>POWER</p>
+                <p>COMMENTS</p>
+              </div> -->
+
+              </div>
+            </div>
+          </div>
+        </div>
+
       </section>
     </div>
 
@@ -82,11 +106,11 @@
             <input class="col-12 mb-3" required="true" name="description" type="textarea" maxlength="300"
               placeholder="Dog Description">
             <input class="col-12 mb-3" required="true" name="imgUrl" type="text" placeholder="Image Link">
-          </form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
         </div>
       </div>
     </div>
