comments and pics

--- a/hackathonProject.client/index.html
+++ b/hackathonProject.client/index.html
@@ -102,9 +102,10 @@
           <form onsubmit="app.DogsController.createDog()">
             <input class="col-12 mb-3" required="true" minlength="2" maxlength="30" name="name" type="text"
               placeholder="Name">
-            <input class="col-1 mb-3" required="true" name="type" type="checkbox" placeholder="type">Hero?
+            <input class="col-1 mb-3" required="true" name="type" type="text" placeholder="type">
             <input class="col-12 mb-3" required="true" name="description" type="textarea" maxlength="300"
               placeholder="Dog Description">
+            <input class="col-12" type="text" name="powers" required="true" placeholder="Powers">
             <input class="col-12 mb-3" required="true" name="imgUrl" type="text" placeholder="Image Link">
         </div>
         <div class="modal-footer">
