--- a/hackathonProject.client/index.html
+++ b/hackathonProject.client/index.html
@@ -55,7 +55,7 @@
           <div class="modal-dialog modal-xl">
             <div class="modal-content">
               <div class="modal-header">
-                <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+                <h1 class="modal-title fs-5" id="staticBackdropLabel"></h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body row" id="active-Dog">
@@ -86,7 +86,7 @@
 
   <button type="button" class="btn btn-primary create-button elevation-2" data-bs-toggle="modal"
     data-bs-target="#staticBackdrop1">
-    Create Super Dog <i class="mdi mdi-dog"></i>
+    Report a Super Dog! <i class="mdi mdi-dog"></i>
   </button>
 
   <!-- Modal -->
@@ -95,17 +95,17 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+          <h1 class="modal-title fs-5" id="staticBackdropLabel">Report a Spotted Super Dog!</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body row">
           <form onsubmit="app.DogsController.createDog()">
             <input class="col-12 mb-3" required="true" minlength="2" maxlength="30" name="name" type="text"
               placeholder="Name">
-            <input class="col-1 mb-3" required="true" name="type" type="text" placeholder="type">
+            <input class="col-1 mb-3" name="type" value="false" type="checkbox" placeholder="type">Was it a Villain?
             <input class="col-12 mb-3" required="true" name="description" type="textarea" maxlength="300"
               placeholder="Dog Description">
-            <input class="col-12" type="text" name="powers" required="true" placeholder="Powers">
+            <input class="col-12 mb-3" type="text" name="powers" required="true" placeholder="Powers">
             <input class="col-12 mb-3" required="true" name="imgUrl" type="text" placeholder="Image Link">
         </div>
         <div class="modal-footer">
